Fixed height for color box on mobile

--- a/styles.css
+++ b/styles.css
@@ -201,7 +201,7 @@ button:hover {
 
   main {
     width: 100%;
-    height: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
     row-gap: 2.5rem;
@@ -217,7 +217,7 @@ button:hover {
   }
 
   h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-style: normal;
     font-weight: 700;
     line-height: 140%;
@@ -227,6 +227,7 @@ button:hover {
 
     .color-box {
       width: 100%;
+      min-height: 15rem;
       display: flex;
       padding: 1.25rem 1.25rem 1.75rem 1.25rem;
       align-items: flex-end;
@@ -237,14 +238,14 @@ button:hover {
 
     .colors-container {
       width: 100%;
-      height: 100%;
+      height: auto;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: start;
       border-radius: 0.75rem;
       background-color: #F2F4F7;
-      overflow: hidden;
+      overflow: visible;
     }
 
     #second-color {
